Rich COast edits

--- a/Justacreation.html
+++ b/Justacreation.html
@@ -8,18 +8,42 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <div class="container">
-      <h1>Rich Coast</h1>
-    </div>
-    <div class="container-two">
-      <h2>-Lyrics Down Below-</h2>
-    </div>
+    <section>
+      <div class="container">
+        <h1>Rich Coast</h1>
+      </div>
+      <div class="container-two">
+        <h2>-Lyrics Down Below-</h2>
+      </div>
+    </section>
+
+
+
+
     <div class="container-three">
-      <h3>Soultwo: </h3>
+      <div class="box"><h3>Soultwo:</h3>></div>
+      <div class="box-small">
+        <h4>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ratione
+          cupiditate doloremque quia similique? Iste, vero iure quia ab ipsam
+          qui sequi itaque consequatur harum voluptates impedit aut, ad
+          voluptatum porro!
+        </h4>
+      </div>
     </div>
-    
-    </body>
-    <footer>
-      Copyright By 
-    </footer>
+
+
+    <div class="container-four">
+      <h3>Goblinsoul:</h3>
+      <div class="container-mini-two">
+        <h4>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim magni
+          atque harum. Provident deserunt magni, reiciendis rem corporis
+          doloremque et id deleniti. Minima praesentium reprehenderit natus ab
+          eum autem pariatur.
+        </h4>
+      </div>
+    </div>
+  </body>
+  <footer>Copyright ©️ 2021 Kreatif MOP All Rights Reserved.</footer>
 </html>
