Rich Coast lyrics

--- a/Justacreation.html
+++ b/Justacreation.html
@@ -17,30 +17,76 @@
       </div>
     </section>
 
-
-
-
     <div class="container-three">
-      <div class="box"><h3>Soultwo:</h3>></div>
+      <div class="box">
+        <h3>
+          <a href="https://www.youtube.com/channel/UChyCyH_j0jWPZUn0v-xCa4g"
+            >Soultwo</a
+          >
+        </h3>
+      </div>
       <div class="box-small">
         <h4>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ratione
-          cupiditate doloremque quia similique? Iste, vero iure quia ab ipsam
-          qui sequi itaque consequatur harum voluptates impedit aut, ad
-          voluptatum porro!
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum dicta
+          sequi excepturi qui, velit deserunt sunt sapiente quidem et ex
+          nostrum? Ad, fugit! Dolore, mollitia ipsa accusamus iure tempore
+          aspernatur, pariatur facilis praesentium explicabo ea facere
+          dignissimos harum repellendus! Sapiente dolores perspiciatis, deleniti
+          quo quia tempore in, ipsam, laborum obcaecati aperiam blanditiis nemo
+          odio aliquid necessitatibus temporibus! Repellat eaque accusantium ex
+          consectetur, modi aperiam voluptate, harum eum iste nobis soluta
+          quisquam reprehenderit. Unde saepe voluptatum nulla dolore? Excepturi
+          cupiditate error earum non incidunt nemo doloremque, voluptas libero
+          et quia, eius quo, eaque omnis amet! Perspiciatis libero accusamus
+          sunt ullam fugit quod aliquam nostrum, qui facilis, ea dolor
+          reprehenderit assumenda minus? Similique, alias sed, nemo laborum
+          officia, dolorum incidunt nesciunt accusamus officiis odit assumenda
+          beatae pariatur. Architecto quam quia mollitia praesentium
+          perspiciatis, ad quibusdam ipsum similique, nesciunt corporis
+          dignissimos? Saepe, quam repudiandae, sit tempore corporis, blanditiis
+          voluptate illo totam tenetur vel iure. Quisquam fugit soluta nostrum
+          minus eligendi, deleniti blanditiis quia itaque impedit veritatis
+          tempora sapiente, ullam debitis explicabo nemo totam alias odio
+          reprehenderit asperiores optio! Minima accusamus recusandae dolore
+          quaerat non praesentium, laudantium odio alias harum itaque
+          voluptatibus officiis obcaecati nostrum vitae sapiente eos iusto magni
+          repudiandae ut hic fugit.
         </h4>
       </div>
     </div>
 
-
-    <div class="container-four">
-      <h3>Goblinsoul:</h3>
-      <div class="container-mini-two">
+    <div class="container-three">
+      <div class="box">
+        <h3>
+          <a href="https://m.youtube.com/channel/UC5vuZnEwIYOh-9MrtIkQVrA"
+            >Goblinsoul</a
+          >
+        </h3>
+      </div>
+      <div class="box-small">
         <h4>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Enim magni
-          atque harum. Provident deserunt magni, reiciendis rem corporis
-          doloremque et id deleniti. Minima praesentium reprehenderit natus ab
-          eum autem pariatur.
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat earum
+          ad modi dolor odit quibusdam impedit? Obcaecati nihil facere dolorem
+          repellat officiis quam sapiente. Blanditiis sint soluta neque odit
+          atque deserunt inventore cupiditate adipisci perspiciatis modi
+          aperiam, quisquam nesciunt ad minima. Magnam alias optio autem est, ex
+          voluptas? Voluptatem quis accusamus repellat corrupti sunt! Mollitia
+          nam praesentium eum, odit at quaerat quos harum voluptates provident
+          illo culpa labore nulla voluptatum sapiente, ad unde pariatur soluta
+          reiciendis blanditiis error, deserunt eveniet? Deserunt saepe sit
+          dolorum dignissimos distinctio beatae sapiente ullam atque minus
+          quaerat quam harum eius alias nihil nisi nam vel magnam quod inventore
+          fuga nemo, laborum delectus aliquid aut! Reiciendis odio dignissimos
+          minus aliquid impedit deleniti eius at eum, recusandae mollitia?
+          Ducimus tenetur quidem odit sapiente obcaecati laborum repudiandae quo
+          quasi voluptatum ex animi, enim doloribus, blanditiis assumenda
+          voluptatem recusandae excepturi voluptas facere! Quo qui voluptates
+          ratione repellendus dolor, quibusdam, aspernatur eveniet expedita
+          adipisci velit explicabo numquam maiores perspiciatis. Tempore porro
+          esse omnis, ex laudantium, a ad id culpa, error expedita at maxime
+          reiciendis. Autem sint aut optio eum impedit quae, atque expedita
+          ratione nemo officiis, laboriosam quibusdam numquam incidunt illo
+          totam ad repellendus architecto, eius debitis culpa dolorem veritatis!
         </h4>
       </div>
     </div>
